tests/errors/surf_lex_13.ki
# LEXER: a lone '}' inside an f-string (must be doubled as '}}' to be literal)
var s = f"closing brace here }"